Issue #48 - ensure created activities are always deleted